LU-1683 agl: increase lock cll_holds for AGL upcall

If without additional cll_holds held for AGL upcall, the AGL lock
may be cancelled/deleted by the AGL thread if the AGL lock cannot
be granted at once.

The osc_lock_wait() will re-trigger lock enqueue for non-granted
AGL lock and return 'CLO_REENQUEUED' to the caller. Original lov
lock enqueue logic ignored such case for lov_lock_enqueue_one(),
so may cause unexpected LASSERT when checking the result.

Signed-off-by: Fan Yong <yong.fan@whamcloud.com>
Change-Id: I37305aba9d9f9ad525decc20badac4afbe7aedb0